<resources>
    <string name="app_name">Clue</string>
    <string name="txt_name">Name</string>
    <string name="txt_download">Download</string>
    <string name="txt_search">Search</string>
    <string name="txt_about">About</string>
    <string name="low_storage_error">Not enough free space</string>
    <string name="permission_camera_rationale">Need permission for camera</string>
    <string name="ok">OK</string>
    <string name="no_camera_permission">No camera permission</string>
    <string name="txt_move">Move</string>
    <string name="txt_location">Enter museum coordinates (0.00, 0.00)</string>
    <string name="txt_create_room">Create first room</string>
    <string name="txt_museum_info">Enter museum info</string>
    <string name="txt_museum_name">Enter museum name</string>
    <string name="txt_get_museum_location">Get location</string>
    <string name="txt_create_instructions">(Beta)Touch the screen and mark the corners of the room. When you finish press done button.</string>
    <string name="txt_info">Info</string>
    <string name="txt_building_location">Get your building location</string>
    <string name="txt_add_door">DOOR ON</string>
    <string name="txt_add_qr">QR ON</string>
    <string name="err_txt_museum_name">Please enter museum name with more than 3 characters</string>
    <string name="err_txt_info">Please enter museum description with more than 10 characters</string>
    <string name="err_txt_location">Please get your building location</string>
    <string name="txt_select_room">(Beta)Do you want to associate already created room with this door</string>
    <string name="museum_id">museumId</string>
    <string name="qr_information">QR Information</string>
    <string name="enter_qr_info">Enter QR Information</string>
    <string name="txt_done">Done</string>
    <string name="transition_museum_cover">Transition Museum Cover</string>
    <string name="transition_download_button">Transition Download Button</string>
    <string name="txt_clue_description">\nClue is an app for navigation inside buildings and closed spaces.
    It uses barcode- and symbol-scanning to allow the person to navigate.
    The main advantage of the app is that it`s easily and cheaply implemented for any type of building.
    Navigation is done by a map with points of interest or by augmented reality directions.</string>

</resources>
